# ai-sec-audit

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: main.py
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  README.md  architecture.md
examples/vulnerable_python_project/: README.md  app.py
llm/: __init__.py  analyzer.py
parser/: __init__.py  ast_parser.py
reporting/: report_generator.py
scanner/: security_rules.py
tests/: test_ast_parser.py  test_cli.py  test_llm_analyzer.py  test_report_generator.py  test_security_rules.py
