[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sec-audit"
version = "0.1.0"
description = "AI-assisted security audit CLI scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ai-sec-audit contributors" }
]
dependencies = [
  "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
ai-sec-audit = "cli.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
